[project]
name = "pygithubactions"
description = "Github actions core library implemented in python"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pygithubactions"]

authors = [
  {name = "Andrey Larin", email = "lestex@gmail.com" }
]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = []
dynamic = ["version"]

[project.urls]  # Optional
"Homepage" = "https://github.com/lestex/pygithubactions.git"
"Source" = "https://github.com/lestex/pygithubactions.git"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = [
  "pygithubactions",
  "pygithubactions.core",
  "pygithubactions.context",
]

[tool.isort]
profile = "google"
src_paths = ["pygithubaction", "tests"]
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F811"]
"tests/*.py" = ["E501"]

[tool.ruff.mccabe]
max-complexity = 3

[tool.hatch]

[tool.hatch.version]
path = "pygithubactions/__init__.py"
